fix: fix spacing issue in about page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1098,7 +1098,7 @@ intro .carousel-container {
 # Services
 --------------------------------------------------------------*/
  .services-section {
-   padding: 30px 0;
+   padding: 20px 0;
    font-family: 'Proxima Nova';
  }
 
